# IDACLI

./: .gitignore  AGENTS.md  README.md  README_EN.md  pyproject.toml
.claude/skills/ida-cli/: SKILL.md
benches/: bench_ida_runtime.py  bench_protocol_runtime.py
docs/: AI_INSTALL.md
examples/: agent_bridge_snippet.py  requests.jsonl
scripts/: install_skill.py
skills/codex/ida-cli/: SKILL.md
skills/codex/ida-cli/agents/: openai.yaml
skills/hermes/ida-cli/: SKILL.md
src/ida_cli/: __init__.py  __main__.py  agent_bridge.py  ai_helpers.py  artifacts.py  cache.py  conflicts.py  daemon.py  kernel.py  mutations.py  parallel_runner.py  protocol.py  runtime.py  supervisor.py  worker_pool.py  wsl.py
tests/: __init__.py  test_agent_bridge.py  test_ai_helpers.py  test_artifacts.py  test_benchmarks.py  test_cache.py  test_conflicts.py  test_kernel.py  test_main.py  test_mutations.py  test_parallel_runner.py  test_protocol.py  test_runtime.py  test_runtime_integration.py  test_skill_distribution.py  test_supervisor.py  test_worker_pool.py
