[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ida-cli"
version = "0.1.0"
description = "AI-only unrestricted pure CLI IDA Python runtime"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ida-ai = "ida_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
